libs/error-stack/tests/snapshots/test_serialize__attachment.snap
---
source: libs/error-stack/tests/test_serialize.rs
expression: report
---
[
  {
    "context": "root error",
    "attachments": [
      "printable A",
    ],
    "sources": [],
  },
]
