libs/error-stack/tests/snapshots/test_serialize__context.snap
---
source: libs/error-stack/tests/test_serialize.rs
expression: report
---
[
  {
    "context": "context A",
    "attachments": [],
    "sources": [
      {
        "context": "root error",
        "attachments": [
          "printable A",
        ],
        "sources": [],
      },
    ],
  },
]
