libs/error-stack/tests/snapshots/test_serialize__multiple_sources.snap
---
source: libs/error-stack/tests/test_serialize.rs
expression: report_a
---
[
  {
    "context": "context A",
    "attachments": [
      "printable C: 4",
    ],
    "sources": [
      {
        "context": "root error",
        "attachments": [
          "printable C: 1",
          "printable C: 3",
        ],
        "sources": [],
      },
      {
        "context": "root error",
        "attachments": [
          "printable C: 2",
          "printable C: 3",
        ],
        "sources": [],
      },
    ],
  },
]
