libs/error-stack/tests/snapshots/test_serialize__multiple_sources_at_root.snap
---
source: libs/error-stack/tests/test_serialize.rs
expression: report_a
---
[
  {
    "context": "root error",
    "attachments": [
      "printable C: 1",
    ],
    "sources": [],
  },
  {
    "context": "root error",
    "attachments": [
      "printable C: 2",
    ],
    "sources": [],
  },
]
